<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/tvSignupGreet"
        android:layout_width="175dp"
        android:layout_height="53dp"
        android:text="@string/signup_to_edunotes"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="274dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:background="@drawable/boxoutline"
        android:elevation="6dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        android:textColorHint="#84000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <EditText
        android:id="@+id/etSEmail"
        android:layout_width="274dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:background="@drawable/boxoutline"
        android:elevation="6dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#84000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etSPassword"
        android:layout_width="274dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:background="@drawable/boxoutline"
        android:elevation="6dp"
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:textColorHint="#84000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.621" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="222dp"
        android:layout_height="45dp"
        android:text="@string/register_account"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />


</androidx.constraintlayout.widget.ConstraintLayout>